--- a/docs/_posts/2020-12-11-Part2-Spec.md
+++ b/docs/_posts/2020-12-11-Part2-Spec.md
@@ -6,7 +6,7 @@ date: 2020-12-11
 
 ## Top Level Project Spec
 
-With any project of a reasonable scale, its worth stepping back and taking as high-level a look at what you wish to achieve as possible, before diving into subtle implementation challenges (as tempting as it is to just get going). Hopefully, this will prevent wasted work and reduce the chance of missing the goals a project initially aimed to achieve, and thus:
+With any project of a reasonable scale, its worth stepping back and taking as high-level a look at what you wish to achieve as possible, before diving into subtle implementational challenges (as tempting as it is to just get going). Hopefully, this will prevent wasted work and reduce the chance of missing the goals the project sets out to achieve, and thus:
 
 ### **L1 Goal** - 11/12/2020
 
@@ -16,15 +16,15 @@ With any project of a reasonable scale, its worth stepping back and taking as hi
 
 #### The **speed, simplicity and availability of MarkDown** ~
 
-MarkDown (.md) is pretty great for a few reasons:
+MarkDown (.md) is generally pretty great for a few reasons:
 
-- Implementing common formatting used in notes is quick and simple, but its focus is on readability and directed towards writing for **the web**, infact this entire docs site is written in MarkDown!.
+- Implementing common formatting used in notes is quick and simple, but its focus is on readability and it is directed towards writing for **the web**, infact this entire docs site is written in MarkDown!.
 
-- Its very well supported across numerous environments, with great choices available for its use and extensions for tools such as VSCode common
+- Its very well supported across numerous environments, with great options available for its development and extensions for tools such as VSCode commonplace.
 
-- Instant Previews and WYSIWYG are very common leading to a very quick and debug/error free development cycle.
+- Instant Previews and WYSIWYG are very common, leading to a very quick and debug/error free development cycle.
 
-All the basic commands used in a .md file can be summarised as so:
+All the basic commands used in a .md file can be summarised as follows:
 
     ## <- H1
     ### <- H3 (etc.)
@@ -59,7 +59,7 @@ All the basic commands used in a .md file can be summarised as so:
 > Quote
 >> Nested quote
 
-Hence the **speed** of creation of MarkDown documents, the **siplicity** of their construction, and the **availability** of the development tools that can be used to generate and preview documents are all highly admirable features to target.
+Hence the **speed** of creation of MarkDown documents, the **simplicity** of their construction, and the **availability** of the development tools that can be used to generate and preview documents are all highly admirable features to target.
 
 For the use-case I am looking to meet however, .md has some issues.
 
