--- a/docs/_posts/2020-12-11-Part2-Spec.md
+++ b/docs/_posts/2020-12-11-Part2-Spec.md
@@ -84,4 +84,4 @@ My hope is to find a happy "medium" between LaTeX and .md, that optimizes the ef
 
 ### **L3 - Developping an Alpha spec**
 
-TBD ...
+To be concluded, I am yet to decide upon a firm spec - some development research is necessary into capabilities.
